force-app/main/default/objects/Oportunity_Revenue_Range__mdt/Oportunity_Revenue_Range__mdt.object-meta.xml
<CustomObject>
    <description>Metadata for defining the opportunity colors according to their revenue ranges</description>
    <label>Oportunity Revenue Range</label>
    <pluralLabel>Oportunity Revenue Ranges</pluralLabel>
</CustomObject>