force-app/main/default/objects/Oportunity_Revenue_Range__mdt/fields/Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit__c</fullName>
    <description>Lower limit for the opportunities revenue ranges</description>
    <label>Lower Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>