force-app/main/default/objects/Oportunity_Revenue_Range__mdt/fields/Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Upper_Limit__c</fullName>
    <description>Upper limit for the opportunities revenue range</description>
    <label>Upper Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>